kubernates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: staff-backend
  namespace: staff-management

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: staff-backend

  template:
    metadata:
      labels:
        app: staff-backend

    spec:
      containers:
        - name: staff-backend

          image: annasab12/staff-management-backend:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
