kubernates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: staff-frontend
  namespace: staff-management

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: staff-frontend

  template:
    metadata:
      labels:
        app: staff-frontend

    spec:
      containers:
        - name: staff-frontend
          image: annasab12/staff-management-frontend:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"
