kubernates/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-mysql
  namespace: staff-management

spec:
  replicas: 1

  selector:
    matchLabels:
      app: staff-mysql

  template:
    metadata:
      labels:
        app: staff-mysql

    spec:
      containers:
        - name: mysql
          image: mysql:8.0

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
