kubernates/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: staff-backend-service
  namespace: staff-management

spec:
  type: NodePort

  selector:
    app: staff-backend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
