kubernates/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: staff-frontend-service
  namespace: staff-management

spec:
  type: NodePort

  selector:
    app: staff-frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
