kubernates/mysql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: staff-mysql
  namespace: staff-management

spec:
  type: ClusterIP

  selector:
    app: staff-mysql

  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
