kubernates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: staff-management-ingress
  namespace: staff-management

spec:
  ingressClassName: nginx

  rules:
    - host: staff.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: staff-backend-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: staff-frontend-service
                port:
                  number: 80
